--- a/templates/adminpanel/home.html
+++ b/templates/adminpanel/home.html
@@ -41,11 +41,7 @@
                 </p>
             </div>
             <div class="col col-lg-6">
-                <a href=>
-                    <p class="text-left" style="font-family: Farsi ; font-weight: lighter ; font-size: 14px">
-                        خروج
-                    </p>
-                </a>
+
             </div>
         </div>
         <div class="row navbar-container">
@@ -64,13 +60,12 @@
             </div>
             <div class="col col-lg-3 col-sm-6">
                 <div class="inside-nav text-center">
-                    <a>
+                    <a href="{% url "toolsImport" %}">
                         <i class="fas fa-tools" style="font-size: 70px ; margin-top:15px ;margin-bottom: 20px"></i>
                         <p class="align-self-end">
                             مدیریت تجهیزات
                         </p>
                     </a>
-
                 </div>
             </div>
             <div class="col col-lg-3 col-sm-6 text-center">
@@ -86,68 +81,6 @@
                 {#                </div>#}
             </div>
         </div>
-        <div class="container-fluid" style="margin-top: 40px">
-            <div class="row">
-                <div class="text-right">
-                    <h5 style="color: #63B0CD ; padding-bottom:23px">
-                        آمار کلی سرویس‌ :
-                    </h5>
-                </div>
-            </div>
-            <div class="row navbar-container text-stats">
-
-                <div class="col-lg-2 text-left">
-                </div>
-                <div class="col-lg-4 text-right">
-                    تعداد کل کاربران :
-                </div>
-                <div class="col-lg-3 text-center">
-                    {{ users.regular }} نفر
-                    <span style="color: #63B0CD">
-                                        ( {{ users.admin }} مدیر )
-                    </span>
-
-                </div>
-                <div class="col-lg-4 text-left">
-                </div>
-
-            </div>
-            <div class="row navbar-container text-stats">
-                <div class="col-lg-2 text-left">
-                </div>
-                <div class="col-lg-4 text-right">
-                    مجموع کل آیتم های صوتی آرشیو :
-                </div>
-                <div class="col-lg-3 text-center">
-                    {{ sounds.time }} دقیقه
-                    <span style="color: #63B0CD">
-
-                    ( {{ sounds.count }} عدد )
-                                        </span>
-                </div>
-                <div class="col-lg-4 text-left">
-                </div>
-            </div>
-            <div class="row navbar-container text-stats">
-
-                <div class="col-lg-2 text-left">
-                </div>
-                <div class="col-lg-4 text-right">
-                    مجموع کل آیتم های تصویری آرشیو :
-                </div>
-                <div class="col-lg-3 text-center">
-                    {{ videos.time }} دقیقه
-                    <span style="color: #63B0CD">
-                    ( {{ videos.count }} عدد )
-                                        </span>
-                </div>
-                <div class="col-lg-4 text-left">
-                </div>
-
-            </div>
-        </div>
-
-
     </div>
 </div>
 </div>
